better instance class and fix width on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -34,7 +34,7 @@ body {
 
 
 #header_wrap .inner {
-  padding: 50px 10px 30px 10px;
+  padding: 30px 10px 30px 10px;
 }
 
 #title {
@@ -100,10 +100,9 @@ h2 {
 }
 
 #author {
-  top: 5%;
-  position: absolute;
-  right: -30%;
   color: white;
+  display: flex;
+  justify-content: flex-end;
 }
 
 
